Refactor aspnet identity view models

--- a/eService.Web/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/eService.Web/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model eService.Web.Models.ExternalLoginConfirmationViewModel
+﻿@model eService.Web.ViewModels.Account.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
