--- a/eService.Web/Views/Account/ForgotPassword.cshtml
+++ b/eService.Web/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model eService.Web.Models.ForgotPasswordViewModel
+﻿@model eService.Web.ViewModels.Account.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Forgot your password?";
 }
