--- a/eService.Web/Views/Account/Register.cshtml
+++ b/eService.Web/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model eService.Web.Models.RegisterViewModel
+﻿@model eService.Web.ViewModels.Account.RegisterViewModel
 @{
     ViewBag.Title = "Register";
 }
