--- a/eService.Web/Views/Account/ResetPassword.cshtml
+++ b/eService.Web/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model eService.Web.Models.ResetPasswordViewModel
+﻿@model eService.Web.ViewModels.Account.ResetPasswordViewModel
 @{
     ViewBag.Title = "Reset password";
 }
