--- a/eService.Web/Views/Account/SendCode.cshtml
+++ b/eService.Web/Views/Account/SendCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model eService.Web.Models.SendCodeViewModel
+﻿@model eService.Web.ViewModels.Account.SendCodeViewModel
 @{
     ViewBag.Title = "Send";
 }
