--- a/eService.Web/Views/Account/VerifyCode.cshtml
+++ b/eService.Web/Views/Account/VerifyCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model eService.Web.Models.VerifyCodeViewModel
+﻿@model eService.Web.ViewModels.Account.VerifyCodeViewModel
 @{
     ViewBag.Title = "Verify";
 }
