--- a/eService.Web/Views/Manage/AddPhoneNumber.cshtml
+++ b/eService.Web/Views/Manage/AddPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model eService.Web.Models.AddPhoneNumberViewModel
+﻿@model eService.Web.ViewModels.Manage.AddPhoneNumberViewModel
 @{
     ViewBag.Title = "Phone Number";
 }
