--- a/eService.Web/Views/Manage/ManageLogins.cshtml
+++ b/eService.Web/Views/Manage/ManageLogins.cshtml
@@ -1,4 +1,4 @@
-﻿@model eService.Web.Models.ManageLoginsViewModel
+﻿@model eService.Web.ViewModels.Manage.ManageLoginsViewModel
 @using Microsoft.Owin.Security
 @{
     ViewBag.Title = "Manage your external logins";
