--- a/eService.Web/Views/Manage/SetPassword.cshtml
+++ b/eService.Web/Views/Manage/SetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model eService.Web.Models.SetPasswordViewModel
+﻿@model eService.Web.ViewModels.Manage.SetPasswordViewModel
 @{
     ViewBag.Title = "Create Password";
 }
