--- a/eService.Web/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/eService.Web/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model eService.Web.Models.ExternalLoginListViewModel
+﻿@model eService.Web.ViewModels.Account.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
 <h4>Use another service to log in.</h4>
