--- a/eService.Web/Views/Manage/ChangePassword.cshtml
+++ b/eService.Web/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model eService.Web.Models.ChangePasswordViewModel
+﻿@model eService.Web.ViewModels.Manage.ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
 }
