--- a/eService.Web/Views/Manage/Index.cshtml
+++ b/eService.Web/Views/Manage/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model eService.Web.Models.IndexViewModel
+﻿@model eService.Web.ViewModels.Manage.IndexViewModel
 @{
     ViewBag.Title = "Manage";
 }
