--- a/eService.Web/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/eService.Web/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model eService.Web.Models.VerifyPhoneNumberViewModel
+﻿@model eService.Web.ViewModels.Manage.VerifyPhoneNumberViewModel
 @{
     ViewBag.Title = "Verify Phone Number";
 }
