--- a/eService.Web/Views/Account/Login.cshtml
+++ b/eService.Web/Views/Account/Login.cshtml
@@ -1,103 +1,52 @@
 ﻿@using eService.Web.ViewModels.Account
 @model LoginViewModel
 @{
-    ViewBag.Title = "Log in";
+    ViewBag.Title = "Вход в системата";
 }
 
-<h2>@ViewBag.Title.</h2>
-
 <div class="row">
-    @*<div class="col-md-8">
-            <section id="loginForm">
-                @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-                {
+    <div class="col-md-3 col-sm-3">        
+            @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+            {
+                <div class="div-trans text-center">
+                    <h3>@ViewBag.Title</h3>
                     @Html.AntiForgeryToken()
-                    <h4>Use a local account to log in.</h4>
-                    <hr />
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                    <div class="form-group">
-                        @Html.LabelFor(m => m.UserName, new { @class = "col-md-2 control-label" })
-                        <div class="col-md-10">
-                            @Html.TextBoxFor(m => m.UserName, new { @class = "form-control" })
+
+                    <div class="col-md-12 col-sm-12">
+                        <div class="form-group">
+                            @Html.TextBoxFor(m => m.UserName, new { @class = "form-control", placeholder = "Потребителско име" })
                             @Html.ValidationMessageFor(m => m.UserName, "", new { @class = "text-danger" })
                         </div>
-                    </div>
-                    <div class="form-group">
-                        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-                        <div class="col-md-10">
-                            @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                    </div>                    
+
+                    <div class="col-md-12 col-sm-12">
+                        <div class="form-group">
+                            @Html.PasswordFor(m => m.Password, new { @class = "form-control", placeholder = "Парола" })
                             @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
                         </div>
                     </div>
-                    <div class="form-group">
-                        <div class="col-md-offset-2 col-md-10">
-                            <div class="checkbox">
-                                @Html.CheckBoxFor(m => m.RememberMe)
-                                @Html.LabelFor(m => m.RememberMe)
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-md-offset-2 col-md-10">
-                            <input type="submit" value="Log in" class="btn btn-default" />
-                        </div>
-                    </div>
-                    <p>
-                        @Html.ActionLink("Register as a new user", "Register")
-                    </p>
 
-                }
-            </section>
-        </div>*@
-
-    <div class="col-md-5">
-
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title text-center form-title">Login</h4>
-            </div>
-            <div class="modal-body padtrbl">
-
-                <div class="login-box-body">
-                    <p class="login-box-msg">Sign in to start your session</p>
-                    <div class="form-group">
-                        <form name="" id="loginForm">
-                            <div class="form-group has-feedback">
-                                <!----- username -------------->
-                                <input class="form-control" placeholder="Username" id="loginid" type="text" autocomplete="off" />
-                                <span style="display:none;font-weight:bold; position:absolute;color: red;position: absolute;padding:4px;font-size: 11px;background-color:rgba(128, 128, 128, 0.26);z-index: 17;  right: 27px; top: 5px;" id="span_loginid"></span>
-                                <!---Alredy exists  ! -->
-                                <span class="glyphicon glyphicon-user form-control-feedback"></span>
-                            </div>
-                            <div class="form-group has-feedback">
-                                <!----- password -------------->
-                                <input class="form-control" placeholder="Password" id="loginpsw" type="password" autocomplete="off" />
-                                <span style="display:none;font-weight:bold; position:absolute;color: grey;position: absolute;padding:4px;font-size: 11px;background-color:rgba(128, 128, 128, 0.26);z-index: 17;  right: 27px; top: 5px;" id="span_loginpsw"></span>
-                                <!---Alredy exists  ! -->
-                                <span class="glyphicon glyphicon-lock form-control-feedback"></span>
-                            </div>
-                            <div class="row">
-                                <div class="col-xs-12">
-                                    <div class="checkbox icheck">
-                                        <label>
-                                            <input type="checkbox" id="loginrem"> Remember Me
-                                        </label>
-                                    </div>
-                                </div>
-                                <div class="col-xs-12">
-                                    <button type="button" class="btn btn-green btn-block btn-flat" onclick="userlogin()">Sign In</button>
+                    <div class="col-md-12 col-sm-12">
+                        <div class="form-group">
+                            <div class="col-md-offset-2 col-md-10">
+                                <div class="checkbox">
+                                    @Html.CheckBoxFor(m => m.RememberMe)
+                                    @Html.LabelFor(m => m.RememberMe)
                                 </div>
                             </div>
-                        </form>
+                        </div>
+
+                        <div class="col-md-12 col-sm-12">
+                            <div class="form-group">
+                                <button type="submit" class="btn btn-success">Влез</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </div>
+            }
     </div>
 </div>
-
-
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
