--- a/eService.Web/Views/Orders/All.cshtml
+++ b/eService.Web/Views/Orders/All.cshtml
@@ -2,8 +2,8 @@
 @model OrdersListViewModel
 
 @{
-    ViewBag.Title = "All";
+    ViewBag.Title = "Сервизни поръчки";
 }
 
-<h2>All Orders</h2>
+<h2>@ViewBag.Title</h2>
 
