--- a/eService.Web/Views/Orders/UnFinished.cshtml
+++ b/eService.Web/Views/Orders/UnFinished.cshtml
@@ -3,8 +3,8 @@
 
 
 @{
-    ViewBag.Title = "UnFinished";
+    ViewBag.Title = "Неприключени поръчки";
 }
 
-<h2>UnFinished</h2>
+<h2>@ViewBag.Title</h2>
 
