--- a/eService.Web/Views/Account/Login.cshtml
+++ b/eService.Web/Views/Account/Login.cshtml
@@ -5,46 +5,48 @@
 }
 
 <div class="row">
-    <div class="col-md-3 col-sm-3">        
-            @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+    <div class="col-md-3 col-sm-3 col-md-offset-4">
+        @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
-                <div class="div-trans text-center">
-                    <h3>@ViewBag.Title</h3>
-                    @Html.AntiForgeryToken()
-                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            <div class="div-trans text-center">
+                <h3>@ViewBag.Title</h3>
+                @Html.AntiForgeryToken()
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-                    <div class="col-md-12 col-sm-12">
-                        <div class="form-group">
-                            @Html.TextBoxFor(m => m.UserName, new { @class = "form-control", placeholder = "Потребителско име" })
-                            @Html.ValidationMessageFor(m => m.UserName, "", new { @class = "text-danger" })
-                        </div>
-                    </div>                    
-
-                    <div class="col-md-12 col-sm-12">
-                        <div class="form-group">
-                            @Html.PasswordFor(m => m.Password, new { @class = "form-control", placeholder = "Парола" })
-                            @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
-                        </div>
+                <div class="col-md-12 col-sm-12">
+                    <div class="form-group">
+                        @Html.TextBoxFor(m => m.UserName, new { @class = "form-control", placeholder = "Потребителско име" })
+                        @Html.ValidationMessageFor(m => m.UserName, "", new { @class = "text-danger" })
                     </div>
+                </div>
 
-                    <div class="col-md-12 col-sm-12">
-                        <div class="form-group">
-                            <div class="col-md-offset-2 col-md-10">
-                                <div class="checkbox">
-                                    @Html.CheckBoxFor(m => m.RememberMe)
-                                    @Html.LabelFor(m => m.RememberMe)
-                                </div>
-                            </div>
-                        </div>
+                <div class="col-md-12 col-sm-12">
+                    <div class="form-group">
+                        @Html.PasswordFor(m => m.Password, new { @class = "form-control", placeholder = "Парола" })
+                        @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+                    </div>
+                </div>
 
-                        <div class="col-md-12 col-sm-12">
-                            <div class="form-group">
-                                <button type="submit" class="btn btn-success">Влез</button>
+                <div class="col-md-12 col-sm-12">
+                    <div class="form-group">
+                        <div class="col-md-offset-2 col-md-10">
+                            <div class="checkbox">
+                                @Html.CheckBoxFor(m => m.RememberMe)
+                                @Html.LabelFor(m => m.RememberMe)
                             </div>
                         </div>
                     </div>
                 </div>
-            }
+
+                <div class="col-md-12 col-sm-12">
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-success">Влез</button>
+                    </div>
+                </div>
+
+
+            </div>
+        }
     </div>
 </div>
 
