--- a/eService.Web/Views/Orders/Search.cshtml
+++ b/eService.Web/Views/Orders/Search.cshtml
@@ -3,8 +3,8 @@
 
 
 @{
-    ViewBag.Title = "Search";
+    ViewBag.Title = "Търсене на сервизна поръчка";
 }
 
-<h2>Search</h2>
+<h2>ViewBag.Title</h2>
 
