--- a/eService.Web/Views/Orders/Add.cshtml
+++ b/eService.Web/Views/Orders/Add.cshtml
@@ -5,5 +5,172 @@
     ViewBag.Title = "Добавяне на сервизна поръчка";
 }
 
-<h2>@ViewBag.Title</h2>
+<div class="row">
+    <div class="col-md-5 col-sm-5 col-md-offset-3">
+        @using (Html.BeginForm("Add", "Orders", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+            {
+            <div class="div-trans text-center">
+                <h3>@ViewBag.Title</h3>
+                @Html.AntiForgeryToken()
 
+                <div class="container">
+                    <div class="col-md-7 col-sm-7">
+                        <div class="form-group">
+                            @Html.EditorFor(m => m.CustomerPhoneNumber, new { htmlAttributes = new { @class = "form-control", type = "number", placeholder = "Телефонен номер на клиента" } })
+                            @Html.ValidationMessageFor(m => m.CustomerPhoneNumber, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                </div>
+
+                <div class="container">
+                    <div class="col-md-12 col-sm-12">
+                        <div class="form-group">
+                            @Html.EditorFor(m => m.CustomerName, new { htmlAttributes = new { @class = "form-control", placeholder = "Имена на клиента" } })
+                            @Html.ValidationMessageFor(m => m.CustomerName, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                </div>
+
+                <div class="container">
+                    <div class="col-md-7 col-sm-7">
+                        <div class="form-group">
+                            @Html.EditorFor(m => m.CustomerTown, new { htmlAttributes = new { @class = "form-control", placeholder = "Град" } })
+                            @Html.ValidationMessageFor(m => m.CustomerTown, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                </div>
+
+                <div class="container">
+                    <div class="col-md-10 col-sm-10">
+                        <div class="form-group">
+                            @Html.EditorFor(m => m.CustomerStreet, new { htmlAttributes = new { @class = "form-control", placeholder = "Улица" } })
+                            @Html.ValidationMessageFor(m => m.CustomerStreet, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="col-md-2 col-sm-2">
+                        <div class="form-group">
+                            @Html.EditorFor(m => m.CustomerAddressNumber, new { htmlAttributes = new { @class = "form-control", placeholder = "№" } })
+                            @Html.ValidationMessageFor(m => m.CustomerAddressNumber, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                </div>
+
+                <div class="container">
+                    <div class="col-md-2 col-sm-2">
+                        <div class="form-group">
+                            @Html.EditorFor(m => m.CustomerAddressEntry, new { htmlAttributes = new { @class = "form-control", placeholder = "вх." } })
+                            @Html.ValidationMessageFor(m => m.CustomerAddressEntry, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="col-md-2 col-sm-2">
+                        <div class="form-group">
+                            @Html.EditorFor(m => m.CustomerAddressFloor, new { htmlAttributes = new { @class = "form-control", placeholder = "ет." } })
+                            @Html.ValidationMessageFor(m => m.CustomerAddressFloor, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="col-md-2 col-sm-2">
+                        <div class="form-group">
+                            @Html.EditorFor(m => m.CustomerAddressApartmentNumber, new { htmlAttributes = new { @class = "form-control", placeholder = "ап." } })
+                            @Html.ValidationMessageFor(m => m.CustomerAddressApartmentNumber, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                </div>
+
+                <div class="container">
+                    <div class="form-group">
+                        <form>
+                            <label class="radio-inline">Вид на ремонта</label>
+                            <label class="radio-inline">
+                                <input type="radio" name="ServiceType" checked>Гаранционен
+                            </label>
+                            <label class="radio-inline">
+                                <input type="radio" name="ServiceType">Извънгаранционен
+                            </label>
+                        </form>
+                    </div>
+                </div>
+
+                <div class="container">
+                    <div class="col-md-12 col-sm-12">
+                        <div class="form-group">
+                            @Html.EditorFor(m => m.Article, new { htmlAttributes = new { @class = "form-control", placeholder = "Артикул" } })
+                            @Html.ValidationMessageFor(m => m.Article, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                </div>
+
+                <div class="container">
+                    <div class="col-md-12 col-sm-12">
+                        <div class="form-group">
+                            @Html.EditorFor(m => m.SerialNumber, new { htmlAttributes = new { @class = "form-control", placeholder = "Сериен номер" } })
+                            @Html.ValidationMessageFor(m => m.SerialNumber, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                </div>
+
+                <div class="container">
+                    <div class="col-md-5 col-sm-5">
+                        <div class="form-group">
+                            @Html.EditorFor(m => m.WarrantyCardNumber, new { htmlAttributes = new { @class = "form-control", placeholder = "Номер на ГК" } })
+                            @Html.ValidationMessageFor(m => m.WarrantyCardNumber, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="col-md-5 col-sm-5">
+                        <div class="form-group">
+                            @Html.EditorFor(m => m.WarrantyCardDate, new { htmlAttributes = new { id = "datepicker", @class = "form-control" } })
+                        </div>
+                    </div>
+                </div>
+
+                <div class="container">
+                    <div class="col-md-12 col-sm-12">
+                        <div class="form-group">
+                            @Html.TextAreaFor(m => m.Defect, new { @class = "form-control", placeholder = "Описание на повредата" })
+                            @Html.ValidationMessageFor(m => m.Defect, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                </div>
+
+                <div class="container">
+                    <div class="col-md-12 col-sm-12">
+                        <div class="form-group">
+                            @Html.TextAreaFor(m => m.Info, new { @class = "form-control", placeholder = "Допълнителна информация" })
+                            @Html.ValidationMessageFor(m => m.Info, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                </div>
+
+                <div class="container">
+                    <div class="form-group">
+                        <form>
+                            <label class="radio-inline">Приоритет</label>
+                            <label class="radio-inline">
+                                <input type="radio" name="Priority" value="false" checked>Нормален
+                            </label>
+                            <label class="radio-inline">
+                                <input type="radio" name="Priority" value="true">Висок
+                            </label>
+                        </form>
+                    </div>
+                </div>
+
+                <div class="container">
+                    <div class="col-md-12 col-sm-12">
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-success">Добави</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
+</div>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/datepicker")
+}
